// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages can be created/edited/published/unpublished/deleted: can be created 1`] = `
{
  "data": {
    "createPage": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 3",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be deleted 1`] = `
{
  "data": {
    "deletePage": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be published 1`] = `
{
  "data": {
    "publishPage": {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": {
        "publishedAt": 2020-11-25T23:55:35.000Z,
        "revision": 0,
        "updatedAt": 2020-11-25T23:55:35.000Z,
      },
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be read by id 1`] = `
{
  "data": {
    "page": {
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 3",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be unpublished 1`] = `
{
  "data": {
    "unpublishPage": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can be updated 1`] = `
{
  "data": {
    "updatePage": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Pages can be created/edited/published/unpublished/deleted: can not be published with the same slug 1`] = `
{
  "data": {
    "publishPage": null,
  },
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
